updated surface identification method

--- a/notebooks/lv/tests/surface_identification.ipynb
+++ b/notebooks/lv/tests/surface_identification.ipynb
@@ -32,55 +32,46 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "File: Full_Heart_Mesh_16.vtk\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fc6b7ffeb4294fe982cdf4a82e69e344",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Renderer(camera=PerspectiveCamera(aspect=1.3333333333333333, children=(DirectionalLight(color='#fefefe', posit…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "dir = Path(\"C:/Users/igorp/University of South Florida/Wenbin Mao - Igor/LV_Meshes/Heart_models\")\n",
-    "# dir = Path(\"C:/Users/igornobrega/USF_Research/University of South Florida/Wenbin Mao - Igor/LV_Meshes/Heart_models\")\n",
-    "files = os.listdir(dir)\n",
-    "\n",
-    "file_id = 7\n",
-    "\n",
-    "print(\"File:\", files[file_id])\n",
-    "\n",
-    "lv = LV.from_pyvista_read(dir/files[file_id], identifier=\"elemTag\", threshold=[0, 1])"
+    "filepath = Path(\"../sample_files/lvhexmesh.vtk\")\n",
+    "lv = LV.from_pyvista_read(filepath)\n",
+    "lv.plot()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<project_heart.lv.left_ventricle.LV at 0x1c2505de430>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import tetgen\n",
-    "lv_surf = lv.get_surface_mesh().triangulate().smooth(350)\n",
-    "tet = tetgen.TetGen(lv_surf)\n",
-    "tet.make_manifold()\n",
-    "tet.tetrahedralize(order=1, \n",
-    "                   nobisect=True,\n",
-    "                  #  quality=False,\n",
-    "                   mindihedral=100, \n",
-    "                   minratio=1.1,\n",
-    "                  #  steinerleft=-1\n",
-    "                   )\n",
-    "lv_tet = LV().from_pyvista_dataset(tet.grid)\n",
-    "lv_tet"
+    "lv.identify_surfaces(\n",
+    "  endo_epi_args=dict(threshold=90.0),\n",
+    "  apex_base_args=dict(ab_ql=0.04, ab_qh=0.69),\n",
+    "  aortic_mitral_args=dict(a1=0.4,\n",
+    "                          a2 = 0.5,\n",
+    "                          a3=0.3,\n",
+    "                          a4=70,\n",
+    "                          a5=132,\n",
+    "                          m1=0.17,\n",
+    "                          m2=0.02,\n",
+    "                          m3=0.07,\n",
+    "                          m4=0.333\n",
+    "                          )\n",
+    ")"
    ]
   },
   {
@@ -91,7 +82,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "80feed7e31ce469f824a3d04c677f7d1",
+       "model_id": "7cb18937fd774ac5adeae30aa00d209b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -104,18 +95,69 @@
     }
    ],
    "source": [
-    "lv_tet.plot()"
+    "lv.plot(\"mesh\", scalars=LV_MESH_DATA.SURFS.value, \n",
+    "        vnodes=[\n",
+    "          (LV_VIRTUAL_NODES.MITRAL, \"green\"),\n",
+    "          (LV_VIRTUAL_NODES.AORTIC, \"red\"),\n",
+    "          (LV_VIRTUAL_NODES.AORTIC_BORDER, \"purple\"),\n",
+    "          ],\n",
+    "        cmap=\"tab20\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aortic_bc = lv.create_spring_rim_bc(LV_SURFS.BORDER_AORTIC.value,\n",
+    "                                    dist_from_c=5.0,\n",
+    "                                    r_alpha=0.7)\n",
+    "mitral_bc = lv.create_spring_rim_bc(LV_SURFS.BORDER_MITRAL.value,\n",
+    "                                    dist_from_c=5.0,\n",
+    "                                    r_alpha=1.0)\n",
+    "\n",
+    "aortic_epi_bc = lv.create_spring_rim_bc(LV_SURFS.EPI_AORTIC.value,\n",
+    "                                    dist_from_c=0.0,\n",
+    "                                    r_alpha=1.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "atr_rim_string_lines = lv.get_springs_pts_for_plot(\n",
+    "  lv.points(mask=lv.get_nodeset(aortic_bc[LV_RIM.REF_NODESET.value])),\n",
+    "  aortic_bc[LV_RIM.NODES.value],\n",
+    "  aortic_bc[LV_RIM.RELATIONS.value], \n",
+    "  1\n",
+    "  )\n",
+    "mtr_rim_string_lines = lv.get_springs_pts_for_plot(\n",
+    "  lv.points(mask=lv.get_nodeset(mitral_bc[LV_RIM.REF_NODESET.value])),\n",
+    "  mitral_bc[LV_RIM.NODES.value],\n",
+    "  mitral_bc[LV_RIM.RELATIONS.value], \n",
+    "  1\n",
+    "  )\n",
+    "\n",
+    "atr_rim_string_lines = lv.get_springs_pts_for_plot(\n",
+    "  lv.points(mask=lv.get_nodeset(aortic_bc[LV_RIM.REF_NODESET.value])),\n",
+    "  aortic_bc[LV_RIM.NODES.value],\n",
+    "  aortic_bc[LV_RIM.RELATIONS.value], \n",
+    "  1\n",
+    "  )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6a7ed69db0ca4203befbe9994845923e",
+       "model_id": "ee03da05690446b59da6373d7812464b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -128,99 +170,37 @@
     }
    ],
    "source": [
-    "lv_tet.guess_epi_endo_based_on_surf_normals(90.0)\n",
-    "lv_tet.plot(\"surface\", scalars=LV_MESH_DATA.EPI_ENDO_GUESS.value)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([6., 6., 6., ..., 0., 6., 0.]), array([6., 6., 6., ..., 0., 0., 0.]))"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lv_tet.identify_base_and_apex_regions()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2fa454c9ea6c4ff594ce5e10269609b2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Renderer(camera=PerspectiveCamera(aspect=1.3333333333333333, children=(DirectionalLight(color='#fefefe', posit…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "lv_tet.identify_mitral_and_aortic_regions(\n",
-    "                                      a1=0.4,  # coeff for radial distance computation\n",
-    "                                      a2 = 0.5,\n",
-    "                                      a3=0.4,\n",
-    "                                      a4=80,\n",
-    "                                      a5=120,\n",
-    "                                      \n",
-    "                                      m1=0.18,\n",
-    "                                      m2=0.005,\n",
-    "                                      m3=0.05,\n",
-    "                                      )\n",
-    "lv_tet.plot(\"mesh\", scalars=LV_MESH_DATA.AM_CLUSTERS.value, cmap=\"tab20\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9ca8bcd1b0e749c4a6f676325ecce2de",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Renderer(camera=PerspectiveCamera(aspect=1.3333333333333333, children=(DirectionalLight(color='#fefefe', posit…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "lv_tet.identify_surfaces(\n",
-    "  endo_epi_args=dict(threshold=90.0),\n",
-    "  apex_base_args=dict(ab_ql=0.05, ab_qh=0.70),\n",
-    "  aortic_mitral_args=dict(a1=0.4,\n",
-    "                          a2 = 0.5,\n",
-    "                          a3=0.4,\n",
-    "                          a4=80,\n",
-    "                          a5=120,\n",
-    "                          m1=0.18,\n",
-    "                          m2=0.005,\n",
-    "                          m3=0.05)\n",
-    ")\n",
-    "lv_tet.plot(\"surface\", scalars=\"TESTE\", cmap=\"tab20\", show_edges=True)"
+    "plotter = pv.Plotter(lighting='three lights')\n",
+    "plotter.background_color = 'w'\n",
+    "plotter.enable_anti_aliasing()\n",
+    "plotter.add_points(lv.get_virtual_node(\"MITRAL\"), color=\"green\", point_size=300)\n",
+    "plotter.add_points(lv.get_virtual_node(\"AORTIC\"), color=\"red\", point_size=300)\n",
+    "plotter.add_points(aortic_bc[LV_RIM.NODES.value], color=\"red\", point_size=300)\n",
+    "plotter.add_points(aortic_bc[LV_RIM.CENTER.value], color=\"red\", point_size=300)\n",
+    "\n",
+    "plotter.add_points(mitral_bc[LV_RIM.NODES.value], color=\"green\", point_size=300)\n",
+    "plotter.add_points(mitral_bc[LV_RIM.CENTER.value], color=\"green\", point_size=300)\n",
+    "\n",
+    "plotter.add_mesh(atr_rim_string_lines, color=\"red\", opacity=0.5, show_edges=False)\n",
+    "plotter.add_mesh(mtr_rim_string_lines, color=\"green\", opacity=0.5, show_edges=False)\n",
+    "\n",
+    "plotter.add_points(aortic_epi_bc[LV_RIM.NODES.value], color=\"pink\", point_size=300)\n",
+    "plotter.add_mesh(atr_epi_rim_string_lines, color=\"pink\", opacity=0.8, show_edges=False)\n",
+    "\n",
+    "\n",
+    "plotter.add_mesh(lv.mesh, \n",
+    "                  scalars=\"LV_SURFS\", \n",
+    "                  cmap=\"Set2\", \n",
+    "                  opacity=1.0, \n",
+    "                  show_edges=False,\n",
+    "                  ambient=0.2, \n",
+    "                  diffuse=0.5, \n",
+    "                  specular=0.5, \n",
+    "                  specular_power=90,\n",
+    "                  #  smooth_shading=True,\n",
+    "                  )\n",
+    "plotter.enable_shadows()\n",
+    "plotter.show()"
    ]
   }
  ],
