updated surface identification

--- a/notebooks/lv/tests/surface_identification.ipynb
+++ b/notebooks/lv/tests/surface_identification.ipynb
@@ -34,7 +34,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fc6b7ffeb4294fe982cdf4a82e69e344",
+       "model_id": "0f68be52a6cf457d9723cd4d7e30b235",
        "version_major": 2,
        "version_minor": 0
       },
@@ -49,7 +49,7 @@
    "source": [
     "filepath = Path(\"../sample_files/lvhexmesh.vtk\")\n",
     "lv = LV.from_pyvista_read(filepath)\n",
-    "lv.plot()"
+    "lv.plot(show_edges=True)"
    ]
   },
   {
@@ -62,10 +62,11 @@
     "  endo_epi_args=dict(threshold=90.0),\n",
     "  apex_base_args=dict(ab_ql=0.04, ab_qh=0.69),\n",
     "  aortic_mitral_args=dict(a1=0.4,\n",
-    "                          a2 = 0.5,\n",
+    "                          a2=0.5,\n",
     "                          a3=0.3,\n",
-    "                          a4=70,\n",
-    "                          a5=132,\n",
+    "                          a4=75,\n",
+    "                          a5=135,\n",
+    "                          \n",
     "                          m1=0.17,\n",
     "                          m2=0.02,\n",
     "                          m3=0.07,\n",
@@ -82,7 +83,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7cb18937fd774ac5adeae30aa00d209b",
+       "model_id": "f34574dd6c654c58a18dca3d2590b2f7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -95,69 +96,24 @@
     }
    ],
    "source": [
-    "lv.plot(\"mesh\", scalars=LV_MESH_DATA.SURFS.value, \n",
+    "lv.plot(\"surface\", scalars=LV_MESH_DATA.SURFS.value, \n",
     "        vnodes=[\n",
     "          (LV_VIRTUAL_NODES.MITRAL, \"green\"),\n",
     "          (LV_VIRTUAL_NODES.AORTIC, \"red\"),\n",
     "          (LV_VIRTUAL_NODES.AORTIC_BORDER, \"purple\"),\n",
     "          ],\n",
-    "        cmap=\"tab20\")"
+    "        cmap=\"tab20_r\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "aortic_bc = lv.create_spring_rim_bc(LV_SURFS.BORDER_AORTIC.value,\n",
-    "                                    dist_from_c=5.0,\n",
-    "                                    r_alpha=0.7)\n",
-    "mitral_bc = lv.create_spring_rim_bc(LV_SURFS.BORDER_MITRAL.value,\n",
-    "                                    dist_from_c=5.0,\n",
-    "                                    r_alpha=1.0)\n",
-    "\n",
-    "aortic_epi_bc = lv.create_spring_rim_bc(LV_SURFS.EPI_AORTIC.value,\n",
-    "                                    dist_from_c=0.0,\n",
-    "                                    r_alpha=1.5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "atr_rim_string_lines = lv.get_springs_pts_for_plot(\n",
-    "  lv.points(mask=lv.get_nodeset(aortic_bc[LV_RIM.REF_NODESET.value])),\n",
-    "  aortic_bc[LV_RIM.NODES.value],\n",
-    "  aortic_bc[LV_RIM.RELATIONS.value], \n",
-    "  1\n",
-    "  )\n",
-    "mtr_rim_string_lines = lv.get_springs_pts_for_plot(\n",
-    "  lv.points(mask=lv.get_nodeset(mitral_bc[LV_RIM.REF_NODESET.value])),\n",
-    "  mitral_bc[LV_RIM.NODES.value],\n",
-    "  mitral_bc[LV_RIM.RELATIONS.value], \n",
-    "  1\n",
-    "  )\n",
-    "\n",
-    "atr_rim_string_lines = lv.get_springs_pts_for_plot(\n",
-    "  lv.points(mask=lv.get_nodeset(aortic_bc[LV_RIM.REF_NODESET.value])),\n",
-    "  aortic_bc[LV_RIM.NODES.value],\n",
-    "  aortic_bc[LV_RIM.RELATIONS.value], \n",
-    "  1\n",
-    "  )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ee03da05690446b59da6373d7812464b",
+       "model_id": "7e131b3f75a4415aa7d08be8ac6e1eac",
        "version_major": 2,
        "version_minor": 0
       },
@@ -170,37 +126,90 @@
     }
    ],
    "source": [
-    "plotter = pv.Plotter(lighting='three lights')\n",
-    "plotter.background_color = 'w'\n",
-    "plotter.enable_anti_aliasing()\n",
-    "plotter.add_points(lv.get_virtual_node(\"MITRAL\"), color=\"green\", point_size=300)\n",
-    "plotter.add_points(lv.get_virtual_node(\"AORTIC\"), color=\"red\", point_size=300)\n",
-    "plotter.add_points(aortic_bc[LV_RIM.NODES.value], color=\"red\", point_size=300)\n",
-    "plotter.add_points(aortic_bc[LV_RIM.CENTER.value], color=\"red\", point_size=300)\n",
-    "\n",
-    "plotter.add_points(mitral_bc[LV_RIM.NODES.value], color=\"green\", point_size=300)\n",
-    "plotter.add_points(mitral_bc[LV_RIM.CENTER.value], color=\"green\", point_size=300)\n",
-    "\n",
-    "plotter.add_mesh(atr_rim_string_lines, color=\"red\", opacity=0.5, show_edges=False)\n",
-    "plotter.add_mesh(mtr_rim_string_lines, color=\"green\", opacity=0.5, show_edges=False)\n",
-    "\n",
-    "plotter.add_points(aortic_epi_bc[LV_RIM.NODES.value], color=\"pink\", point_size=300)\n",
-    "plotter.add_mesh(atr_epi_rim_string_lines, color=\"pink\", opacity=0.8, show_edges=False)\n",
-    "\n",
-    "\n",
-    "plotter.add_mesh(lv.mesh, \n",
-    "                  scalars=\"LV_SURFS\", \n",
-    "                  cmap=\"Set2\", \n",
-    "                  opacity=1.0, \n",
-    "                  show_edges=False,\n",
-    "                  ambient=0.2, \n",
-    "                  diffuse=0.5, \n",
-    "                  specular=0.5, \n",
-    "                  specular_power=90,\n",
-    "                  #  smooth_shading=True,\n",
-    "                  )\n",
-    "plotter.enable_shadows()\n",
-    "plotter.show()"
+    "lv.plot(\"surface\", scalars=LV_MESH_DATA.SURFS_DETAILED.value, \n",
+    "        vnodes=[\n",
+    "          (LV_VIRTUAL_NODES.MITRAL, \"green\"),\n",
+    "          (LV_VIRTUAL_NODES.AORTIC, \"red\"),\n",
+    "          (LV_VIRTUAL_NODES.AORTIC_BORDER, \"purple\"),\n",
+    "          ],\n",
+    "        cmap=\"tab20_r\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c7930c55ba274bd187a445d5651eee2c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Renderer(camera=PerspectiveCamera(aspect=1.3333333333333333, children=(DirectionalLight(color='#fefefe', posit…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "lv.plot(\"mesh\", scalars=LV_MESH_DATA.AB_ENDO_EPI.value, \n",
+    "        cat_exclude_zero=True,\n",
+    "        cmap=\"Set2_r\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b9ae716bedf64affbc4c74ecf20d2489",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Renderer(camera=PerspectiveCamera(aspect=1.3333333333333333, children=(DirectionalLight(color='#fefefe', posit…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "lv.plot(\"mesh\", scalars=LV_MESH_DATA.EPI_ENDO.value, \n",
+    "        cmap=\"Set2_r\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "64f42c86781e45cead85db3248497142",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Renderer(camera=PerspectiveCamera(aspect=1.3333333333333333, children=(DirectionalLight(color='#fefefe', posit…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "lv.plot(\"mesh\", scalars=LV_MESH_DATA.AM_EPI_ENDO.value, \n",
+    "        cat_exclude_zero=True,\n",
+    "        cmap=\"Set2\")"
    ]
   }
  ],
