added geometry transform_point_data_to_cell_data
better function than "pyvista" similar function.

--- a/notebooks/lv/tests/surface_identification.ipynb
+++ b/notebooks/lv/tests/surface_identification.ipynb
@@ -34,7 +34,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1d800a5e18554ae4b705ecb1e4329c0a",
+       "model_id": "9753512d6b284d00b4505cb522dfc44b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -83,7 +83,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6cc68e965dbe400d956fae1352c13968",
+       "model_id": "9c62b691423546c8b3ccb8cb193960b9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -113,7 +113,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dcf302ffdd2a4b97a991fb14b0a85ef4",
+       "model_id": "b3e5414b6ecc4784acac8c9ad2dc29a0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -143,7 +143,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "526df1a897c84c57b83ea6eecfedad1f",
+       "model_id": "13ed380f3db34a51a30373611ff18e06",
        "version_major": 2,
        "version_minor": 0
       },
@@ -169,7 +169,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2b4e16f82aee43b2a1e52efb5a4b1cdb",
+       "model_id": "1eb91dfa292e416a988a2942af2ca756",
        "version_major": 2,
        "version_minor": 0
       },
@@ -194,7 +194,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f9d5ad54a4514249bbc3759a2f90f8c9",
+       "model_id": "38a52505f4d04089a42bcc49636ecd6f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -208,6 +208,57 @@
    ],
    "source": [
     "lv.plot(\"mesh\", scalars=LV_MESH_DATA.AM_EPI_ENDO.value, \n",
+    "        cat_exclude_zero=True,\n",
+    "        cmap=\"Set2\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Testing point data to cell data transformation:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cellCat = lv.transform_point_data_to_cell_data(LV_MESH_DATA.AM_EPI_ENDO.value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lv.mesh.cell_data[\"TESTCAT\"] = cellCat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b89a9f632e5e4aeb9f7e23e0506e8390",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Renderer(camera=PerspectiveCamera(aspect=1.3333333333333333, children=(DirectionalLight(color='#fefefe', posit…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "lv.plot(\"mesh\", scalars=\"TESTCAT\", \n",
     "        cat_exclude_zero=True,\n",
     "        cmap=\"Set2\")"
    ]
